# ComfyUI-AudioLoopHelper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  conftest.py  nodes.py  nodes_analysis.py  pyproject.toml
docs/: PLAN.md  audio_analysis_guide.md  debugging_guide.md  latent_loop_build_guide.md  latent_loop_workflow_guide.md  ltx23_model_reference.md  ltx23_prompt_system_prompts.md  ltxv_looping_sampler_settings.md  nag_technical_reference.md  pipeline_flow_image.md  pipeline_flow_latent.md  profiling_guide.md  prompt_creation_guide.md  prompt_workflow_end_to_end.md  subgraph_latent_rework_guide.md  system_prompt.md  upscale_guide.md  workflow_pipeline_trace.md
example_workflows/: audio-loop-music-video_image.json  audio-loop-music-video_image_adain_perstep.json  audio-loop-music-video_latent.json  audio-loop-music-video_latent_keyframe.json  latent-loop-music-video-v1.json  native-audio-looping-music-video_v0406.json  native-audio-looping-music-video_v0408.json  native-audio-looping-music-video_v0409_latent.json
scripts/: analyze_audio.py  analyze_audio_features.py  apply_ltx_decoder.py  apply_perf_improvements.py  apply_profiling_nodes.py  apply_sage_mode.py  build_keyframe_workflow.py  patch_scheduling_wiring.py  preprocess_audio_for_ltx.py  profile_summary.py  remove_profiling_nodes.py  test_workflow_integrity.py  validate_workflow_decoder.py  workflow_utils.py
tests/: conftest.py  test_audio_analysis_nodes.py  test_audio_features.py  test_cache_nodes.py  test_decoder_validator.py  test_keyframe_nodes.py  test_profile_nodes.py  test_workflows.py  (+1 more)
(+11 files in other folders)
